RESOLVED FIXED239102
[GLIB] Unreviewed, build fix for Debian Stable after r292251
https://bugs.webkit.org/show_bug.cgi?id=239102
Summary [GLIB] Unreviewed, build fix for Debian Stable after r292251
Diego Pino
Reported 2022-04-11 20:25:18 PDT
[GLIB] Unreviewed, build fix for Debian Stable after r292251
Attachments
[fast-cq] Patch (1.61 KB, patch)
2022-04-11 20:33 PDT, Diego Pino
no flags
Diego Pino
Comment 1 2022-04-11 20:33:49 PDT
Created attachment 457309 [details] [fast-cq] Patch
EWS
Comment 2 2022-04-11 22:48:36 PDT
Committed r292761 (249545@main): <https://commits.webkit.org/249545@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457309 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-11 22:49:17 PDT
Note You need to log in before you can comment on or make changes to this bug.