[GLIB] Unreviewed, build fix for Debian Stable after r292251 https://bugs.webkit.org/show_bug.cgi?id=239102

* UIProcess/gtk/WaylandCompositor.cpp:
(WebKit::WaylandCompositor::initializeEGL): Convert char* to String.

Canonical link: https://commits.webkit.org/249545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292761 268f45cc-cd09-0410-ab3c-d52691b4dbfc